			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2820 2006/03/17 07:23:30 suz Exp $

<200603>
2006-03-17  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/nd6.c: fixed a memory leak for an unresolved
	packet in ND queue

2006-03-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/nd6_rtr.c: implements section 2.2. of 
	RFC4191, regarding the reserved preference value (10).
	
Fri Mar  3 20:20:37 JST 2006	keiichi@iijlab.net
	* netbsd/sys/netinet6/in6_pcb.c: send an IPV6_PATHMTU ancillary
	data when sending a packet whose size is larger than the path
	mtu to the destination.

2005-03-03  SUZUKI, Shinsuke <suz@alaxala.net>
	* removed the dhcpv6-related programs, since they are 
	  now maintained/developed/released in wide-dhcpv6 project in sourceforge.net.

2006-03-03  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c (mld_state_change_report)
	an update to the fix in Feb 11, 2006

<200602>
2006-02-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/icmp6.c (icmp6_redirect_input): fixed a bug
	that a Redirect couldn't be processed correctly if the original
	packet contained an extension header.
	Pointed out by: Qing Li

2006-02-11  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c (mld_state_change_report)
	fixed a bug that no MLDv2 report is advertised when host state changes 
	from IN/EX to EX/IN, respectively.
	Reported by: Yu-Jung Lee

2006-02-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/kern/uipc_mbuf.c (m_pullup): fixed memory leak when
	the original mbuf had an mtag and the pull-up operation required
	allocating a new mbuf.
	Reported by: Garfield Hsieh

<200601>
2006-01-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/{icmp6.c, in6.[ch]}: not reply an ICMPv6 Error
	message for a packet from an obvious anycast address.

2006-01-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/netinet6/in6_pcb.c (in6_{set,peer}sockaddr):